arkts_static_test/04_Names_Declarations_Scopes/ets_cases/4.5_Type_Declarations/compile-pass/NAM_04_05_006_PASS_GENERIC_UNION_RECURSIVE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id NAM_04_05_006_PASS_GENERIC_UNION_RECURSIVE
 * @expect compile-pass
 * @section 4.5
 * @design 泛型联合递归
 * @note 正向用例：验证泛型别名的联合递归
 */
type A<T> = string | Array<A<T>>;
